--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
             height: 100vh;
             width: 100%;
         }
+
+        /* Button style */
+        .button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            background-color: #1d4ed8;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .button:hover {
+            background-color: #2563eb;
+        }
     </style>
 </head>
 
@@ -65,7 +83,8 @@
             <div class="md:ml-8 text-gray-700">
                 <h2 class="text-3xl font-bold mb-4">About Our Project</h2>
                 <p class="mb-4">Our community mapping tool allows you to explore local issues, ranging from food deserts
-                    to air quality. Using GIS and open data, we provide an interactive platform for visualizing and
+                    to air quality. Using GIS and open data, we provide an interactive platform for
+                    ...........visualizing and
                     understanding these challenges.</p>
                 <ul class="list-disc pl-6">
                     <li>Map food deserts and access to fresh food.</li>
@@ -78,6 +97,8 @@
 
     <!-- Interactive Map Section -->
     <section id="map" class="h-screen">
+        <!-- Button to load the india_heatmap.html -->
+        <button class="button" onclick="loadHeatmap()">Click Here to See the Output</button>
         <div class="h-full w-full" id="map"></div>
     </section>
 
@@ -144,6 +165,11 @@
                 1.0: 'red'   // The color scale from blue (low) to red (high)
             }
         }).addTo(map);
+
+        // Function to load the india_heatmap.html
+        function loadHeatmap() {
+            window.open('india_heatmap.html', '_blank'); // Opens the heatmap in a new tab
+        }
     </script>
 
 </body>
